"""Test the eurotronic_cometblue sensor platform."""

from freezegun import freeze_time
import pytest
from syrupy.assertion import SnapshotAssertion
from voluptuous.error import Invalid

from homeassistant.components.eurotronic_cometblue import DOMAIN
from homeassistant.core import HomeAssistant
from homeassistant.util import dt as dt_util

from .conftest import setup_with_selected_platforms

from tests.common import MockConfigEntry

ENTITY_ID = "climate.comet_blue_aa_bb_cc_dd_ee_ff"

# FIXME: Tests need to raise ServiceValidationError instead of voluptuous.Invalid and ValueError???


async def test_get_schedule(
    hass: HomeAssistant,
    # entity_registry: er.EntityRegistry,
    snapshot: SnapshotAssertion,
    mock_config_entry: MockConfigEntry,
) -> None:
    """Test sensor entity state and registry data."""
    await setup_with_selected_platforms(hass, mock_config_entry)

    schedule = await hass.services.async_call(
        DOMAIN,
        "get_schedule",
        {"entity_id": ENTITY_ID},
        blocking=True,
        return_response=True,
    )

    snapshot.assert_match(schedule)


async def test_set_schedule(
    hass: HomeAssistant,
    snapshot: SnapshotAssertion,
    mock_config_entry: MockConfigEntry,
) -> None:
    """Test sensor entity state and registry data."""
    await setup_with_selected_platforms(hass, mock_config_entry)

    # Only changed days should be updated, the rest remains the same.
    await hass.services.async_call(
        DOMAIN,
        "set_schedule",
        {
            "entity_id": ENTITY_ID,
            "monday": {"start1": "08:00", "end1": "17:00"},
            "sunday": {
                "start1": "09:00",
                "end1": "11:30",
                "start2": "13:00",
                "end2": "15:00",
                "start3": "18:00",
                "end3": "22:00",
                "start4": "23:00",
                "end4": "23:40",
            },
        },
        blocking=True,
    )
    schedule = await hass.services.async_call(
        DOMAIN,
        "get_schedule",
        {"entity_id": ENTITY_ID},
        blocking=True,
        return_response=True,
    )
    assert schedule == snapshot(name="changed")

    # Test deleting schedule from device
    await hass.services.async_call(
        DOMAIN,
        "set_schedule",
        {
            "entity_id": ENTITY_ID,
            "monday": {"delete": True},
            "friday": {"delete": True},
        },
        blocking=True,
    )
    schedule = await hass.services.async_call(
        DOMAIN,
        "get_schedule",
        {"entity_id": ENTITY_ID},
        blocking=True,
        return_response=True,
    )
    assert schedule == snapshot(name="deleted")


async def test_set_schedule_errors(
    hass: HomeAssistant,
    mock_config_entry: MockConfigEntry,
) -> None:
    """Test sensor entity state and registry data."""
    await setup_with_selected_platforms(hass, mock_config_entry)

    with pytest.raises(Invalid, match="Invalid time specified"):
        await hass.services.async_call(
            DOMAIN,
            "set_schedule",
            {
                "entity_id": ENTITY_ID,
                "monday": {"start1": "08:00", "end1": "24:01"},
            },
            blocking=True,
        )

    with pytest.raises(Invalid, match="Missing start/end entry"):
        await hass.services.async_call(
            DOMAIN,
            "set_schedule",
            {
                "entity_id": ENTITY_ID,
                "monday": {"start1": "08:00"},
            },
            blocking=True,
        )

    with pytest.raises(Invalid, match="Invalid time range"):
        await hass.services.async_call(
            DOMAIN,
            "set_schedule",
            {
                "entity_id": ENTITY_ID,
                "monday": {"start1": "08:00", "end1": "07:00"},
            },
            blocking=True,
        )

    with pytest.raises(Invalid, match="Overlapping times found in schedule"):
        await hass.services.async_call(
            DOMAIN,
            "set_schedule",
            {
                "entity_id": ENTITY_ID,
                "monday": {
                    "start1": "08:00",
                    "end1": "17:00",
                    "start2": "16:00",
                    "end2": "18:00",
                },
            },
            blocking=True,
        )

    with pytest.raises(Invalid, match="Overlapping times found in schedule"):
        await hass.services.async_call(
            DOMAIN,
            "set_schedule",
            {
                "entity_id": ENTITY_ID,
                "monday": {
                    "start1": "08:00",
                    "end1": "17:00",
                    "start2": "16:00",
                    "end2": "18:00",
                },
            },
            blocking=True,
        )


@freeze_time("2026-04-01T18:03:00+00:00")
async def test_set_holiday(
    hass: HomeAssistant,
    snapshot: SnapshotAssertion,
    mock_config_entry: MockConfigEntry,
) -> None:
    """Test sensor entity state and registry data."""
    await setup_with_selected_platforms(hass, mock_config_entry)

    # Only changed days should be updated, the rest remains the same.
    await hass.services.async_call(
        DOMAIN,
        "set_holiday",
        {
            "entity_id": ENTITY_ID,
            "start": "2026-04-01 19:00:00",
            "end": "2026-04-10 12:30:00",
            "temperature": 21.5,
        },
        blocking=True,
    )
    await mock_config_entry.runtime_data.async_refresh()

    # Testing against device data as holiday is not directly exposed as entity state
    # Datetime is also floored to hours in local time
    assert mock_config_entry.runtime_data.data.holiday == {
        "start": dt_util.dt.datetime(2026, 4, 1, 19, 0, 0),
        "end": dt_util.dt.datetime(2026, 4, 10, 12, 0, 0),
        "temperature": 21.5,
    }


@freeze_time("2026-04-01T18:03:00+00:00")
async def test_set_holiday_errors(
    hass: HomeAssistant,
    snapshot: SnapshotAssertion,
    mock_config_entry: MockConfigEntry,
) -> None:
    """Test sensor entity state and registry data."""
    await setup_with_selected_platforms(hass, mock_config_entry)

    # Start date must be in the future (at least 1 hour ahead as time is floored to hours on device)
    with pytest.raises(ValueError, match="Start date .* must be in the future"):
        await hass.services.async_call(
            DOMAIN,
            "set_holiday",
            {
                "entity_id": ENTITY_ID,
                "start": "2026-04-01 18:50:00",
                "end": "2026-04-10 12:30:00",
                "temperature": 21.5,
            },
            blocking=True,
        )

    # Temperature must be a half precision float
    with pytest.raises(Invalid, match="value .* is not a half precision float"):
        await hass.services.async_call(
            DOMAIN,
            "set_holiday",
            {
                "entity_id": ENTITY_ID,
                "start": "2026-04-01 19:00:00",
                "end": "2026-04-10 12:30:00",
                "temperature": 21.3,
            },
            blocking=True,
        )
